--- a/src/application/FreeSolo.fxml
+++ b/src/application/FreeSolo.fxml
@@ -16,6 +16,6 @@
             <InnerShadow />
          </effect>
       </ImageView>
-      <Button fx:id="btnSalida" layoutX="886.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#cerrarEmergente" prefHeight="33.0" prefWidth="89.0" text="Salida" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="886.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="535.0" />
+      <Button fx:id="btnSalida" layoutX="886.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#cerrarVentana" prefHeight="33.0" prefWidth="89.0" text="Salida" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="886.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="535.0" />
    </children>
 </AnchorPane>
